rede/app.yaml
# app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minha-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minha-app
  template:
    metadata:
      labels:
        app: minha-app
    spec:
      containers:
        - name: app
          image: kubedevio/web-color:blue
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: minha-app-svc
spec:
  selector:
    app: minha-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP   # ← ClusterIP aqui; o Ingress vai expor
