rede/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minha-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minha-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minha-app-svc
                port:
                  number: 80
